--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "finance-tracker-backend",
+  "name": "finance-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "helmet": "^7.0.0",
     "mongoose": "^7.0.0"
   },
   "devDependencies": {
